--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "errorhandler": "~1.4.1",
     "express": "~4.13.3",
     "request": "^2.67.0",
+    "socket.io": "^1.4.5",
     "watson-developer-cloud": "~1.0.6"
   }
 }
